--- a/src/views/views.panel.ejs
+++ b/src/views/views.panel.ejs
@@ -12,113 +12,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="aside col-2 col-md-2 d-flex flex-column justify-content-between">
-                <div>
-                    <div class="header d-flex align-items-center justify-content-center mt-5">
-                        <img class="title" src="/img/estrella-afilada-medio-trazo 1.png" alt="Apex-Logo" style="height: 50px; margin-right: 10px;">
-                        <h1 style="color: white; font-size: 30px; font-weight:700">Apex</h1>
-                    </div>
-                    <div class="d-flex flex-column align-items-center justify-content-center mt-5">
-                        <!-- Ajustes Dropdown -->
-                        <button class="btn btn-primary d-flex align-items-center justify-content-between" id="settings-button">
-                            <span class="text-start">Ajustes</span>
-                            <img class="dropdown-arrow" src="/img/angulo-hacia-abajo 1.png" alt="">
-                        </button>
-                        <div id="settings-dropdown" style="display: none; flex-direction: column; background-color: #4961E4; height: auto;">
-                            <button class="btn btn-secondary text-start">Cuenta</button>
-                            <button class="btn btn-secondary text-start">Plataforma</button>
-                            <button class="btn btn-secondary text-start">Autenticación de dos factores</button>
-                        </div>
-                
-                        <!-- Usuarios Dropdown -->
-                        <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="users-button">
-                            <span class="text-start">Usuarios</span>
-                            <img class="dropdown-arrow" src="/img/angulo-hacia-abajo 1.png" alt="">
-                        </button>
-                        <div id="users-dropdown" style="display: none; flex-direction: column; background-color: #4961E4; height: auto; width: 100%;">
-                            <button class="btn btn-secondary text-start">Listado</button>
-                            <button class="btn btn-secondary text-start">Permisos</button>
-                            <button class="btn btn-secondary text-start">Cuentas bloqueadas</button>
-                            <button class="btn btn-secondary text-start">Panel de control</button>
-                            <button class="btn btn-secondary text-start">Panel de seguridad</button>
-                            <button class="btn btn-secondary text-start">Eliminación de cuentas</button>
-                            <button class="btn btn-secondary text-start">Copias de seguridad</button>
-                        </div>
-                
-                        <!-- Registros Dropdown -->
-                        <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="records-button">
-                            <span class="text-start">Registros</span>
-                            <img class="dropdown-arrow" src="/img/angulo-hacia-abajo 1.png" alt="">
-                        </button>
-                        <div id="records-dropdown" style="display: none; flex-direction: column; background-color: #4961E4; height: 100%; width: 100%;">
-                            <button class="btn btn-secondary text-start">Usuarios</button>
-                            <button class="btn btn-secondary text-start">Inicios de sesión</button>
-                            <button class="btn btn-secondary text-start">Detección</button>
-                            <button class="btn btn-secondary text-start">Monitoreo</button>
-                        </div>
-                
-                        <!-- Grupos Dropdown -->
-                        <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="groups-button">
-                            <span class="text-start">Grupos</span>
-                        </button>
-                
-                        <!-- Informes Dropdown -->
-                        <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="reports-button">
-                            <span class="text-start">Informes</span>
-                        </button>
-                
-                        <!-- Accesos Dropdown -->
-                        <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="access-button">
-                            <span class="text-start">Accesos</span>
-                            <img class="dropdown-arrow" src="/img/angulo-hacia-abajo 1.png" alt="">
-                        </button>
-                        <div id="access-dropdown" style="display: none; flex-direction: column; background-color: #4961E4; height: auto; width: 100%;">
-                            <button class="btn btn-secondary text-start">Historial</button>
-                            <button class="btn btn-secondary text-start">Intentos</button>
-                            <button class="btn btn-secondary text-start">Configuración</button>
-                        </div>
-                
-                        <!-- Exportar Datos Dropdown -->
-                        <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="export-button">
-                            <span class="text-start">Exportar Datos</span>
-                        </button>
-                
-                        <!-- Administración Dropdown -->
-                        <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="admin-button">
-                            <span class="text-start">Administración</span>
-                            <img class="dropdown-arrow" src="/img/angulo-hacia-abajo 1.png" alt="">
-                        </button>
-                        <div id="admin-dropdown" style="display: none; flex-direction: column; background-color: #4961E4; height: auto; width: 100%;">
-                            <button class="btn btn-secondary text-start">Permisos</button>
-                            <button class="btn btn-secondary text-start">Logs de Seguridad</button>
-                            <button class="btn btn-secondary text-start">Configuración de logs</button>
-                            <button class="btn btn-secondary text-start">Dispositivos</button>
-                        </div>
-                
-                        <!-- Configuración Dropdown -->
-                        <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="config-button">
-                            <span class="text-start">Configuración</span>
-                            <img class="dropdown-arrow" src="/img/angulo-hacia-abajo 1.png" alt="">
-                        </button>
-                        <div id="config-dropdown" style="display: none; flex-direction: column; background-color: #4961E4; height: auto; width: 100%;">
-                            <button class="btn btn-secondary text-start">Configuración del sistema</button>
-                            <button class="btn btn-secondary text-start">Preguntas de Seguridad</button>
-                            <button class="btn btn-secondary text-start">Encriptación de contraseñas</button>
-                        </div>
-                    </div>
-                </div>
-                
-                
-                <div class="admin-section d-flex align-items-center justify-content-center mt-5">
-                    <div class="flex-column mt-5 me-5">
-                        <h1 style="color: white; font-size: 20px; margin-bottom: 0;">Administrador</h1>
-                        <p style="color: gainsboro;">admin@gmail.com</p> 
-                    </div>
-                    <div class="mt-4" style="color: white;">
-                        <img src="/img/menu-puntos-vertical 1.png" alt="">
-                    </div>
-                </div>
-            </div>
+            <%- include('./components/menu'); %>
             <div class="content col-md-10">
                 <div class="row mb-4 header-row">
                     <div class="col-12 d-flex">
@@ -127,7 +21,7 @@
                                 <h1>Panel de Control usuarios</h1>
                             </div>
                             <div class="col-4 d-flex">
-                                <button class="btn btn-primary btn-custom">Agregar Usuario</button>
+                                <button class="btn btn-primary btn-custom agregar">Agregar Usuario</button>
                             </div>
                         </div>
                     </div>
@@ -363,18 +257,9 @@
         </div>
     </div>
 </div>
-<script>
-    document.querySelectorAll('.btn-primary').forEach(button => {
-    button.addEventListener('click', () => {
-        const dropdownId = button.id.replace('button', 'dropdown');
-        const dropdown = document.getElementById(dropdownId);
-        dropdown.style.display = dropdown.style.display === 'none' ? 'flex' : 'none';
-    });
-});
-
-</script>
     <script src="/js/botones.js"></script>  
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/dropdown-panel.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
