--- a/src/public/css/recuperarClave.css
+++ b/src/public/css/recuperarClave.css
@@ -1,11 +1,19 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Corbel";
+}
+
+@font-face {
+  font-family: "Corbel";
+  src: url(../font/CORBEL.TTF);
 }
 
 body {
-  background-size: contain;
   background-image: url("../img/bgRecuperarClave.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .containerBlur {
@@ -24,7 +32,7 @@ body {
   border-radius: 15px;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 3fr 2fr 2fr 1fr 2fr 1fr;
+  grid-template-rows: 1fr 2fr 2fr 2fr 1fr 2fr 1fr;
 }
 
 .tituloCaja {
@@ -46,6 +54,14 @@ body {
   justify-content: center;
   align-items: center;
   grid-row: 4;
+}
+
+.containerCampo2 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-row: 5;
 }
 
 .campo {
