--- a/src/views/views.codigoRecuperacion.ejs
+++ b/src/views/views.codigoRecuperacion.ejs
@@ -11,15 +11,15 @@
       <div class="containerCaja">
         <h1 class="tituloCaja">Recuperar Contraseña</h1>
         <p class="mensaje">
-          Ingrese el correo electrónico con el que te registraste
+          Ingrese el código que se le envió al correo proporcionado
         </p>
         <div class="containerCampo">
           <input
             class="campo"
-            type="email"
-            name="email"
-            id="email"
-            placeholder="Ingrese su correo"
+            type="text"
+            name="codigo"
+            id="codigo"
+            placeholder="Ingrese el codigo"
           />
         </div>
         <div class="containerBtn">
