--- a/src/views/views.nuevaClave.ejs
+++ b/src/views/views.nuevaClave.ejs
@@ -3,27 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recuperar Contraseña</title>
+    <title>Recuperar Clave</title>
     <link rel="stylesheet" href="/css/recuperarClave.css" />
   </head>
   <body>
     <div class="containerBlur">
       <div class="containerCaja">
         <h1 class="tituloCaja">Recuperar Contraseña</h1>
-        <p class="mensaje">
-          Ingrese el correo electrónico con el que te registraste
-        </p>
+        <p class="mensaje">Ingrese la nueva contraseña</p>
         <div class="containerCampo">
           <input
             class="campo"
-            type="email"
-            name="email"
-            id="email"
-            placeholder="Ingrese su correo"
+            type="password"
+            name="clave"
+            id="clave"
+            placeholder="Ingrese la contraseña"
+          />
+        </div>
+        <div class="containerCampo2">
+          <input
+            class="campo"
+            type="password"
+            name="claveConfirmacion"
+            id="claveConfirmacion"
+            placeholder="Confirme la contraseña"
           />
         </div>
         <div class="containerBtn">
-          <input class="btn" type="submit" value="Enviar" />
+          <input class="btn" type="submit" value="Guardar" />
         </div>
       </div>
     </div>
