--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -124,3 +124,57 @@ a{
     }
     
 }
+
+@media (max-height: 680px) {
+    *{
+        margin: 0px;
+        padding: 0px;
+        font-family: 'Corbel';
+    }
+    .fondo{
+        height: 100vh;
+        width: 100%;
+        background: #151c4180;
+        z-index: 9999;
+    }
+    .formulario{
+        height: 350px;
+        width: 500px;
+        background-color: #394dc0c5;
+        position: absolute;
+        z-index: 9999;
+        margin-top: -20px;
+        border-radius: 15px;
+        color: azure;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    input{
+        margin: 10px;
+        width: 300px;
+        height: 10px;
+        border-radius: 10px;
+        border: none;
+        padding: 10px;
+    }
+    .boton{
+        margin: 20px;
+        width: 320px;
+        height: 20px;
+        border-radius: 10px;
+        border: none;
+        padding: 1px;
+        transition: .2s;
+    }
+    .metodos > a{
+        height: 40px;
+        width: 40px;
+    }
+
+    .metodos > a > img {
+        height: 20px;
+        width: 20px;
+    }
+}
