--- a/src/views/views.perfil.ejs
+++ b/src/views/views.perfil.ejs
@@ -81,6 +81,16 @@
 
     })
 
+    document.addEventListener("click", (event) => {
+      const isClickInside =
+      notificaciones.contains(event.target) ||
+      abrir.contains(event.target);
+
+      if (!isClickInside) {
+        notificaciones.classList.remove("active");
+      }
+    });
+
     // document.addEventListener('DOMContentLoaded', ()=>{
     //     const notificaciones = document.getElementById('notificaciones');
     // if (notificaciones) {
